--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap" rel="stylesheet">
+    <!-- CSS -->
     <link rel="stylesheet" href="style.css" />
     <title>Michael Jackson - Thriller</title>
   </head>
@@ -13,6 +17,12 @@
         paroles</span>
       </label>
     </header>
+    <main id="container">
+
+    </main>
+    <footer id="footer">
+
+    </footer>
     <script type="module" src="song.js"></script>
     <script type="module" src="index.js"></script>
   </body>
