--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <!-- Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto&family=Roboto+Slab&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <!-- CSS -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css/reset.css">
+    <link rel="stylesheet" href="css/style.css" />
     <title>Michael Jackson - Thriller</title>
   </head>
   <body>
@@ -17,13 +18,13 @@
         paroles</span>
       </label>
     </header>
-    <main id="container">
 
+    <main id="container">
+       
     </main>
     <footer id="footer">
-
     </footer>
-    <script type="module" src="song.js"></script>
-    <script type="module" src="index.js"></script>
+    <script type="module" src="js/song.js"></script>
+    <script type="module" src="js/index.js"></script>
   </body>
 </html>
